--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <!-- IEの互換モードを防ぐ -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!-- 外部ファイル -->
+    <link href="./css/index.css" rel="stylesheet">
+
     <!-- OGP(シェア)用 -->
     <meta property="og:image" content="">
-    <meta property="og:title" content="">
+    <meta property="og:title" content="@_Mokuichiのホームページ">
     <meta property="og:description" content="">
     <meta property="og:site_name" content="@Mokuichi147">
     <meta property="og:url" content="https://Mokuichi147.netlify.com">
@@ -26,5 +29,6 @@
 </head>
 <body>
     <!-- 空っぽ -->
+    <p>test</p>
 </body>
 </html>
