--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="">
     <meta property="og:title" content="@_Mokuichiのホームページ">
     <meta property="og:description" content="">
-    <meta property="og:site_name" content="@Mokuichi147">
+    <meta property="og:site_name" content="@_Mokuichi147">
     <meta property="og:url" content="https://Mokuichi147.netlify.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Mokuichi147">
