テキストを中央に寄せる

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <meta name="twitter:site" content="@Mokuichi147">
 </head>
 <body>
-    <!-- 空っぽ -->
-    <p>test</p>
+    <!-- 中身 -->
+    <class="center">
+        <p>test</p>
+    </class>
 </body>
 </html>
