--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <!-- 中身 -->
-    <class="center">
+    <dev class="center">
         <p>test</p>
-    </class>
+    </dev>
 </body>
 </html>
