classを実験的に増やした

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 </head>
 <body>
     <!-- 中身 -->
-    <dev class="center">
-        <p>Welcome!</p>
-    </dev>
+    <dev class="main-center">Welcome!</dev>
+    <dev class="sub-center">このサイトは現在制作途中です。</dev>
 </body>
 </html>
