スペルミスの訂正

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <!-- 中身 -->
-    <dev class="main-center">Welcome!</dev>
-    <dev class="sub-center">このサイトは現在制作途中です。</dev>
+    <div class="main-center">Welcome!</div>
+    <div class="sub-center">このサイトは現在制作途中です。</div>
 </body>
 </html>
