--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 </head>
 <body>
     <!-- 中身 -->
-    <div class="main-center">Welcome!</div>
-    <div class="sub-center">このサイトは現在制作途中です。</div>
+    <div id="title">
+        <div class="main-center">Welcome!</div>
+        <div class="sub-center">このサイトは現在制作途中です。</div>
+    </div>
 </body>
 </html>
