--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <div class="main-center">Welcome!</div>
         <div class="sub-center">このサイトは現在制作途中です。</div>
     </div>
+    <div class="main-center">test</div>
 </body>
 </html>
