--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 <body>
     <!-- 中身 -->
     <div id="title">
-        <div class="main-center">Welcome!</div>
-        <div class="sub-center">このサイトは現在制作途中です。</div>
+        <div id="title-box">
+            <div class="main-center">Welcome!</div>
+            <div class="sub-center">このサイトは現在制作途中です。</div>
+        </div>
     </div>
-    <div class="main-center">test</div>
+    <div class="main-center">自己紹介</div>
 </body>
 </html>
