調整とboxからcircleへの変更

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <!-- 中身 -->
     <div id="title">
-        <div id="title-box">
+        <div id="title-circle">
             <div class="main-center">Welcome!</div>
             <div class="sub-center">このサイトは現在制作途中です。</div>
         </div>
