--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     <!-- 中身 -->
     <div id="title">
         <div id="title-circle">
-            <div class="main-center">Welcome!</div>
-            <div class="sub-center">このサイトは現在制作途中です。</div>
+            <div class="auto-margin">
+                <div class="main-center">Welcome!</div>
+                <div class="sub-center">このサイトは現在制作途中です。</div>
+            </div>
         </div>
     </div>
     <div class="main-center">自己紹介</div>
