--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="title">
         <div id="title-circle-anim">
             <div id="title-circle">
-                <div class="main-center">Welcome!</div>
-                <div class="sub-center">このサイトは現在制作途中です。</div>
+                <div id="title-main-text">Welcome!</div>
+                <div id="title-sub-text">このサイトは現在制作途中です。</div>
             </div>
         </div>
     </div>
