textのフェードインを追加

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <!-- 中身 -->
     <div id="title">
-        <div id="title-circle-anim">
+        <div id="title-circle-edge">
             <div id="title-circle">
                 <div id="title-main-text">Welcome!</div>
                 <div id="title-sub-text">このサイトは現在制作途中です。</div>
