--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>@Mokuichi147</title>
+    <title>@_Mokuichi</title>
     <!-- 説明 -->
     <meta name="description" content="Mokuichi147のホームページ">
     <!-- 著作者 -->
@@ -22,10 +22,10 @@
     <meta property="og:image" content="">
     <meta property="og:title" content="@_Mokuichiのホームページ">
     <meta property="og:description" content="">
-    <meta property="og:site_name" content="@_Mokuichi147">
+    <meta property="og:site_name" content="@_Mokuichi">
     <meta property="og:url" content="https://Mokuichi147.netlify.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Mokuichi147">
+    <meta name="twitter:site" content="@_Mokuichi">
 </head>
 <body>
     <!-- 中身 -->
