アイコンを回転させる

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         </div>
     </div>
     <div class="main-center">自己紹介</div>
-    <div id="my-image"></div>
+    <div id="icon-image"></div>
 </body>
 </html>
