--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
     </div>
     <div class="main-center">自己紹介</div>
     <div id="icon-image"></div>
+    <div class="main-center">Mokuichi</div>
+    <div class="sub-center">
+        <p>
+        2017年の7月ごろからプログラミングを始めた高専生です。<br>
+        趣味はプログラミングとアニメ鑑賞、そして気ままに撮影すること。<br>
+        言語はPython3をメインで使用。<br>
+        RaspberryPiやiPhoneで動作する作品を作っています。
+        </p>
+    </div>
 </body>
 </html>
