brタグの削除

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="main-center">Mokuichi</div>
     <div class="sub-center">
         <p>
-        2017年の7月ごろからプログラミングを始めた高専生です。<br>
-        趣味はプログラミングとアニメ鑑賞、そして気ままに撮影すること。<br>
-        言語はPython3をメインで使用。<br>
+        2017年の7月ごろからプログラミングを始めた高専生です。
+        趣味はプログラミングとアニメ鑑賞、そして気ままに撮影すること。
+        言語はPython3をメインで使用。
         RaspberryPiやiPhoneで動作する作品を作っています。
         </p>
     </div>
