--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="twitter:site" content="@_Mokuichi">
 </head>
 <body>
-    <!-- 中身 -->
+    <!-- タイトル -->
     <div id="title">
         <div id="title-circle-edge">
             <div id="title-circle">
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="main-center">自己紹介</div>
+    <!-- 自己紹介 -->
     <div id="icon-image"></div>
     <div class="main-center">Mokuichi</div>
     <div class="sub-center">
