--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <!-- 自己紹介 -->
     <div id="icon-image"></div>
-    <div class="main-center">Mokuichi</div>
+    <div class="main-center">Mokuichi147</div>
     <div class="sub-center">
         <p>
         2017年の7月ごろからプログラミングを始めた高専生です。
