--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
         RaspberryPiやiPhoneで動作する作品を作っています。
         </p>
     </div>
+    <!-- SNSリンク -->
+    <div id="sns-container">
+        <div id="sns-twitter"></div>
+        <div id="sns-note"></div>
+        <div id="sns-github"></div>
+        <div id="sns-instagram"></div>
+    </div>
 </body>
 </html>
