リンクの追加

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </div>
     <!-- SNSリンク -->
     <div id="sns-container">
-        <div id="sns-twitter"></div>
-        <div id="sns-note"></div>
-        <div id="sns-github"></div>
-        <div id="sns-instagram"></div>
+        <a href="https://twitter.com/_Mokuichi"><div id="sns-twitter"></div></a>
+        <a href="https://note.mu/mokuichi"><div id="sns-note"></div></a>
+        <a href="https://github.com/Mokuichi147"><div id="sns-github"></div></a>
+        <a href="https://www.instagram.com/mokuichi147"><div id="sns-instagram"></div></a>
     </div>
 </body>
 </html>
