--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
     <!-- 自己紹介 -->
     <div id="icon-image"></div>
+    <svg id="icon" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="50" cy="50" r="50"/>
+    </svg>
     <div class="main-center">Mokuichi147</div>
     <!-- SNSリンク -->
     <div id="sns-container">
