svg circleの大きさと位置の調整

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- 自己紹介 -->
     <div id="icon-image"></div>
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="50" cy="50" r="50"/>
+        <circle cx="50%" cy="50%" r="18vmin" id="icon-circle"/>
     </svg>
     <div class="main-center">Mokuichi147</div>
     <!-- SNSリンク -->
