--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
     <div id="icon-image"></div>
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50%" cy="50%" r="19vmin" id="icon-circle"/>
+        <image >
     </svg>
     <div class="main-center">Mokuichi147</div>
     <!-- SNSリンク -->
     <div id="sns-container">
-        <a href="https://twitter.com/_Mokuichi"><div id="sns-twitter"></div></a>
-        <a href="https://note.mu/mokuichi"><div id="sns-note"></div></a>
-        <a href="https://github.com/Mokuichi147"><div id="sns-github"></div></a>
-        <a href="https://www.instagram.com/mokuichi147"><div id="sns-instagram"></div></a>
+        <a href="https://twitter.com/_Mokuichi" id="sns-twitter"></a>
+        <a href="https://note.mu/mokuichi" id="sns-note"></a>
+        <a href="https://github.com/Mokuichi147" id="sns-github"></a>
+        <a href="https://www.instagram.com/mokuichi147" id="sns-instagram"></a>
     </div>
     <div class="sub-center">
         <p>
