--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
         </div>
     </div>
     <!-- 自己紹介 -->
-    <div id="icon-image"></div>
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50%" cy="50%" r="19vmin" id="icon-circle"/>
-        <image xlink:href="images/2019_Mokuichi.png" width="37vmin" height="37vmin"/>
-        <image >
+        <image xlink:href="images/2019_Mokuichi.png" width="37vmin" height="37vmin" id="icon-image"/>
     </svg>
     <div class="main-center">Mokuichi147</div>
     <!-- SNSリンク -->
