--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- 自己紹介 -->
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50%" cy="50%" r="19vmin" id="icon-circle"/>
-        <image xlink:href="images/2019_Mokuichi.png" width="86%" heigth="86%" x="7%" y="7%"/>
+        <image xlink:href="images/2019_Mokuichi.png" width="86%" height="86%" x="7%" y="7%"/>
     </svg>
     <div class="main-center">Mokuichi147</div>
     <!-- SNSリンク -->
