--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <!-- 自己紹介 -->
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="50%" cy="50%" r="19vmin" id="icon-circle"/>
+        <circle cx="50%" cy="50%" r="47%" id="icon-circle"/>
         <image xlink:href="images/2019_Mokuichi.png" width="86%" height="86%" x="7%" y="7%"/>
     </svg>
     <div class="main-center">Mokuichi147</div>
