--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@_Mokuichi">
 </head>
-<body>
+<body ontouchstart="">
     <!-- タイトル -->
     <div id="title">
         <div id="title-circle-edge">
@@ -38,7 +38,7 @@
         </div>
     </div>
     <!-- 自己紹介 -->
-    <svg id="icon" xmlns="http://www.w3.org/2000/svg" ontouchstart="">
+    <svg id="icon" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50%" cy="50%" r="47%" id="icon-circle"/>
         <image xlink:href="images/2019_Mokuichi.png" width="86%" height="86%" x="7%" y="7%"/>
     </svg>
