ファビコンの追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>@_Mokuichi</title>
+    <link rel="icon" type="image/png" href="images/2019_Mokuichi.png">
     <!-- 説明 -->
     <meta name="description" content="Mokuichi147のホームページ">
     <!-- 著作者 -->
