--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="@_Mokuichiのホームページ">
     <meta property="og:description" content="">
     <meta property="og:site_name" content="@_Mokuichi">
-    <meta property="og:url" content="https://Mokuichi147.netlify.com">
+    <meta property="og:url" content="https://Mokuichi147.github.io">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@_Mokuichi">
 </head>
