--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@_Mokuichi">
 </head>
-<body ontouchstart="">
+<body>
     <!-- タイトル -->
     <div id="title">
         <div id="title-main-text">Welcome!</div>
         <div id="title-sub-text">このサイトは現在制作途中です。</div>
     </div>
     <!-- 自己紹介 -->
-    <svg id="icon" xmlns="http://www.w3.org/2000/svg">
+    <svg id="icon" xmlns="http://www.w3.org/2000/svg" ontouchstart="">
         <circle cx="50%" cy="50%" r="47%" id="icon-circle"/>
         <image xlink:href="images/2019_Mokuichi.png" width="86%" height="86%" x="7%" y="7%"/>
     </svg>
