--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="robots" content="noindex,nofollow">
     <!-- IEの互換モードを防ぐ -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- メディアクエリに対応させる -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 外部ファイル -->
     <link href="./css/index.css" rel="stylesheet">
