正式な呼び方に変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex,nofollow">
     <!-- IEの互換モードを防ぐ -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- メディアクエリに対応させる & iPhoneのセーフゾーンを広げる -->
+    <!-- メディアクエリに対応させる & iPhoneのセーフエリアを広げる -->
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
     <!-- 外部ファイル -->
