タイトルをsvgに切り替えた

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 </head>
 <body ontouchstart="">
     <!-- タイトル -->
-    <div id="title">
-        <div id="title-main-text">Welcome!</div>
-        <div id="title-sub-text">このサイトは現在制作途中です。</div>
-    </div>
+    <svg id="title" xmlns="http://www.w3.org/2000/svg">
+        <image xlink:href="images/mountain_lite.svg" id="title-image"/>
+        <text x="50%" y="50%" id="title-main-text">Welcome!</text>
+        <text x="50%" y="53.5%" id="title-sub-text">このサイトは現在制作途中です。</text>
+    </svg>
     <!-- 自己紹介 -->
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50%" cy="50%" r="47%" id="icon-circle"/>
