--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 </head>
 <body ontouchstart="">
     <!-- タイトル -->
-    <svg id="title" xmlns="http://www.w3.org/2000/svg">
-        <image xlink:href="images/mountain_lite.svg" id="title-image"/>
-        <text x="50%" y="50%" id="title-main-text">Welcome!</text>
-        <text x="50%" y="53.5%" id="title-sub-text">このサイトは現在制作途中です。</text>
-    </svg>
+    <div id="title-box">
+        <svg id="title" xmlns="http://www.w3.org/2000/svg">
+            <image xlink:href="images/mountain_lite.svg" id="title-image"/>
+            <text x="35vw" y="55vh" id="title-main-text">Welcome!</text>
+            <text x="37vw" y="58vh" id="title-sub-text">このサイトは現在制作途中です。</text>
+        </svg>
+    </div>
     <!-- 自己紹介 -->
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50%" cy="50%" r="47%" id="icon-circle"/>
