位置の指定方法を変更

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div id="title-box">
         <svg id="title" xmlns="http://www.w3.org/2000/svg">
             <image xlink:href="images/mountain_lite.svg" id="title-image"/>
-            <text x="35vw" y="55vh" id="title-main-text">Welcome!</text>
-            <text x="37vw" y="58vh" id="title-sub-text">このサイトは現在制作途中です。</text>
+            <text x="0" y="0" text-anchor="middle" id="title-main-text">Welcome!</text>
+            <text x="0" y="0" text-anchor="middle" id="title-sub-text">このサイトは現在制作途中です。</text>
         </svg>
     </div>
     <!-- 自己紹介 -->
