--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- タイトル -->
     <div id="title-box">
         <svg id="title" xmlns="http://www.w3.org/2000/svg">
-            <image x="0" y="0" width="100%" height="100%" xlink:href="images/mountain_lite.svg"/>
+            <image x="0" y="0" width="100%" height="100%" xlink:href="images/mountain_lite.svg" id="title-image"/>
             <text x="0" y="0" text-anchor="middle" id="title-main-text">Welcome!</text>
             <text x="0" y="0" text-anchor="middle" id="title-sub-text">このサイトは現在制作途中です。</text>
         </svg>
