--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
     <div id="product">
         <div class="main-center">制作物</div>
     </div>
+<!-- jQueryを読み込む -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
