画像をhtml5での表示からcssでの表示に戻した

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- OGP(シェア)用 -->
     <meta property="og:image" content="">
-    <meta property="og:title" content="@_Mokuichiのホームページ">
+    <meta proper ty="og:title" content="@_Mokuichiのホームページ">
     <meta property="og:description" content="">
     <meta property="og:site_name" content="@_Mokuichi">
     <meta property="og:url" content="https://Mokuichi147.github.io">
@@ -32,12 +32,9 @@
 </head>
 <body ontouchstart="">
     <!-- タイトル -->
-    <div id="title-box">
-        <svg id="title" xmlns="http://www.w3.org/2000/svg">
-            <image x="0" y="0" width="100%" height="100%" xlink:href="images/mountain_lite.svg" id="title-image"/>
-            <text x="0" y="0" text-anchor="middle" id="title-main-text">Welcome!</text>
-            <text x="0" y="0" text-anchor="middle" id="title-sub-text">このサイトは現在制作途中です。</text>
-        </svg>
+    <div id="title">
+        <div id="title-main-text">Welcome!</div>
+        <div id="title-sub-text">このサイトは現在制作途中です。</div>
     </div>
     <!-- 自己紹介 -->
     <svg id="icon" xmlns="http://www.w3.org/2000/svg">
