制作物の動画テスト実装

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
     <!-- 制作物 -->
     <div id="product">
         <div class="main-center">制作物</div>
+        <div id="product-container">
+            <div class="movie">
+                <iframe width="360" height="760" src="https://www.youtube.com/embed/bi6gX-Yehb8"></iframe>
+            </div>
+        </div>
     </div>
 <!-- jQueryを読み込む -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
