動画サイズの変更

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="main-center">制作物</div>
         <div id="product-container">
             <div class="movie">
-                <iframe width="360" height="760" src="https://www.youtube.com/embed/bi6gX-Yehb8"></iframe>
+                <iframe src="https://www.youtube.com/embed/bi6gX-Yehb8"></iframe>
             </div>
         </div>
     </div>
