--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     <div id="product">
         <div class="main-center">制作物</div>
         <div id="product-container">
-            <div class="movie">
-                <iframe src="https://www.youtube.com/embed/bi6gX-Yehb8"></iframe>
-            </div>
+            <div class="movie"><iframe src="https://www.youtube.com/embed/bi6gX-Yehb8"></iframe></div>
+            <div class="sub-center"><p>
+                6D.ai SDKを使用して、ARで絵を書いたりひと筆で書いた文字を認識してメニュー画面を表示したり、パーティクルを飛ばしたりすることができます。
+            </p></div>
         </div>
     </div>
 <!-- jQueryを読み込む -->
