制作物の画像を六角形にするテスト

--- a/index.html
+++ b/index.html
@@ -57,14 +57,23 @@
         RaspberryPiやiPhoneで動作する作品を作っています。
         </p>
     </div>
+
     <!-- 制作物 -->
     <div id="product">
         <div class="main-center">制作物</div>
-        <div id="product-container">
-            <div class="movie"><iframe src="https://www.youtube.com/embed/bi6gX-Yehb8"></iframe></div>
-            <div class="sub-center"><p>
-                6D.ai SDKを使用して、ARで絵を書いたりひと筆で書いた文字を認識してメニュー画面を表示したり、パーティクルを飛ばしたりすることができます。
-            </p></div>
+        <div class="box">
+            <div class="box-60deg">
+                <div class="box-120deg">
+                    <div id="arapp6d"><a href="https://youtu.be/bi6gX-Yehb8"></a></div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-60deg">
+                <div class="box-120deg">
+                    <div id="raspigrasses"></div>
+                </div>
+            </div>
         </div>
     </div>
 <!-- jQueryを読み込む -->
