制作物の追加

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
-                    <div id="arapp6d"><a href="https://youtu.be/bi6gX-Yehb8"></a></div>
+                    <div id="arapp6d"></div>
                 </div>
             </div>
         </div>
@@ -72,6 +72,27 @@
             <div class="box-60deg">
                 <div class="box-120deg">
                     <div id="raspigrasses"></div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-60deg">
+                <div class="box-120deg">
+                    <div id="avatar2i"></div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-60deg">
+                <div class="box-120deg">
+                    <div id="sfgui"></div>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-60deg">
+                <div class="box-120deg">
+                    <div id="lunchbox"></div>
                 </div>
             </div>
         </div>
