制作物の一部にリンクを追加した

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
-                    <div id="arapp6d"></div>
+                    <a href="https://youtu.be/bi6gX-Yehb8"><div id="arapp6d"></div></a>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
-                    <div id="avatar2i"></div>
+                    <a href="https://youtu.be/68_sWrP0qx8"><div id="avatar2i"></div></a>
                 </div>
             </div>
         </div>
