制作物の順番とサイズの調整

--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
-                    <a href="https://youtu.be/bi6gX-Yehb8"><div id="arapp6d"></div></a>
+                    <a href="https://twitter.com/search?q=from%3A_Mokuichi%20Pythonista"><div id="sfgui"></div></a>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-60deg">
+                <div class="box-120deg">
+                    <a href="https://twitter.com/search?q=from%3A_Mokuichi%20お弁当箱"><div id="lunchbox"></div></a>
                 </div>
             </div>
         </div>
@@ -78,21 +85,14 @@
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
-                    <a href="https://youtu.be/68_sWrP0qx8"><div id="avatar2i"></div></a>
+                    <a href="https://youtu.be/bi6gX-Yehb8"><div id="arapp6d"></div></a>
                 </div>
             </div>
         </div>
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
-                    <a href="https://twitter.com/search?q=from%3A_Mokuichi%20Pythonista"><div id="sfgui"></div></a>
-                </div>
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-60deg">
-                <div class="box-120deg">
-                    <a href="https://twitter.com/search?q=from%3A_Mokuichi%20お弁当箱"><div id="lunchbox"></div></a>
+                    <a href="https://twitter.com/_Mokuichi/status/1058996143059685376"><div id="avatar2i"></div></a>
                 </div>
             </div>
         </div>
