制作物を2列以上で表示できるようにした

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </div>
 
     <!-- 制作物 -->
+    <div id="product-title">制作物</div>
     <div id="product">
-        <div class="main-center">制作物</div>
         <div class="box">
             <div class="box-60deg">
                 <div class="box-120deg">
